# mass_gathering

./: .gitignore  Cargo.toml  README.md  demo.sh  index.html  notes.md  prepare-client.sh  release.sh  release_example.sh  run_client-server_testbed.sh  www_build.sh
.cargo/: config.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs  plugins.rs
dots/: events.dot  one.dot
examples/: collider_starting_distance_bug.rs  collisions.rs  despawned_collider.rs  despawned_planet_cruft_bugs-again.md  despawned_planet_cruft_bugs-without_respawn.md  despawned_planet_cruft_bugs.md  despawned_planet_cruft_bugs.rs  planet_collision.rs  shooting_gallery.rs  umm.rs  vector_ball.rs  wireframe_cone.rs  wireframe_our_shapes.rs
game/: Cargo.toml
game/src/: components.rs  events.rs  lib.rs  physics.rs  plugins.rs  resources.rs  simulation.rs
game/src/systems/: mod.rs  scratch.rs
notes/: network_stuff.md
pkg/: index.js
refactoring/: Cargo.toml
refactoring/src/: client.rs  components.rs  lib.rs  physics.rs  server.rs
refactoring/src/systems/: mod.rs
scripts/: demo.sh  prepare-client.sh  testbed.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs  plugins.rs
src/: bodies.rs  camera.rs  client.rs  components.rs  craft.rs  events.rs  flying_transform.rs  global_config.rs  helpscreen.rs  inhabitant.rs  lib.rs  lines.rs  main.rs  networking.rs  organization.md  physics.rs  prelude.rs  relative_transforms.rs  resources.rs  server.rs  space_camera.rs  systems.rs  ui.rs  wat.rs
src/craft/: controls.rs  mod.rs  setup.rs  vector_ball.rs
src/mg_shapes/: cone.rs  credit.md  cylinder.rs  mod.rs  util.rs
src/networking/: client.rs  mod.rs  renet.md  server.rs
src/systems/: mod.rs  scratch.rs
