[workspace]
members = ["game", "client", "server"]
resolver="2"

[workspace.package]
version = "0.37.0"

[workspace.dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["bevy_core_pipeline"] }

[profile.release]
strip = true
opt-level = "s"
lto = "thin" # true?
#codegen-units = 1
# "cargo bloat"?

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
