[package]
name = "mass_gathering"
version = "0.9.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
bevy_rapier3d = "0.23.0"
egui = "0.24.1"
egui_extras = "0.24.2"
rand = "0.8.5"
rapier3d = "0.17.2"

[profile.release]
opt-level = "s"
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
