[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["bevy_core_pipeline", "bevy_pbr"] }
bevy_rapier3d = { version = "0.19.0", default-features = false, features = ["dim3"] }
serde = { version = "1.0.152", features = [ "derive" ] }
bevy_renet = { path = "../../renet/bevy_renet" }
bincode = "1.3.3"
bevy_egui = "0.18.0"
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
