[package]
name = "game"
version = "0.37.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { version = "0.19.0", default-features = false, features = ["dim3"] }
serde = { version = "1.0.152", features = [ "derive" ] }
bevy_renet = "0.0.6"
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
