[package]
name = "server"
version = "0.33.0"
edition = "2021"

[dependencies]
game = { path = "../game" }
client = { path = "../client" }
#
bevy = { version = "0.9.1", default-features = false, features = ["bevy_core_pipeline"] }
serde = { version = "1.0.152", features = [ "derive" ] }
bevy_renet = "0.0.6"
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
