[package]
name = "server"
version = "0.33.0"
edition = "2021"

[dependencies]
game = { path = "../game" }
bevy = { workspace = true }
serde = { version = "1.0.152", features = [ "derive" ] }
bevy_renet = "0.0.6"
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }

[features]
windows = ["bevy/bevy_winit", "bevy/bevy_pbr"]
x11 = ["bevy/x11"]
